--- a/public/style.css
+++ b/public/style.css
@@ -5,9 +5,27 @@ body {
     background: #ece9e9;
 }
 
+.navbar {
+    margin-bottom: 15px;
+}
+
 .nav-link {
     text-transform: uppercase;
     font-weight: 400;
+    font-size: 18px;
+}
+
+.navbar-brand {
+    font-family: 'Poppins', sans-serif;
+    font-size: 25px;
+}
+
+.preachers-buttons {
+    margin-bottom: 10px;
+}
+
+.card {
+    margin-top: 8px;
 }
 .card.city {
     background: #f6edd9;
@@ -30,7 +48,7 @@ h1 {
     color: #28a745;
     font-size: 35px;
     font-weight: 700;
-    margin-top: 70px;
+    margin-top: 90px;
 }
 
 h4 {
