--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="text-center">Witaj na Territory Manager</h1>
-                <h4 class="text-center">
-                    Wolne tereny zboru <%= currentUser.username %>
-                </h4>
+                <h1 class="text-center">
+                    Wolne tereny zboru <%= currentUser.username %>: <%= territories.length %>
+                </h1>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -97,7 +96,7 @@
             <div class="row">
                 <% territories.forEach((territory) => { %>
                     <% if(typeof territory.preacher === 'undefined'){ %>
-                        <div class="col-lg-4 col-md-6 col-sm-12" style="margin-top: 8px;">
+                        <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="card <%= territory.kind %>">
                                     <div class="card-title text-center" id="name">
                                         <br>
