--- a/views/preachers/index.ejs
+++ b/views/preachers/index.ejs
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="text-center">Głosiciele zboru <%= currentUser.username %></h1>
+                <h1 class="text-center">Głosiciele zboru <%= currentUser.username %>: <%= preachers.length %></h1>
                 <div class="text-center">
                     <a href="/preachers/new" class="btn btn-success" style="margin-bottom: 15px;">Dodaj głosiciela</a>
                 </div>
@@ -33,9 +33,9 @@
         <% } else { %>
             <div class="row">
                 <% preachers.forEach((preacher) => { %>
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 align-baseline">
                                 <span class="info float-start"><%= preacher.name %></span>
-                                <div class="d-inline float-end">
+                                <div class="d-inline float-end preachers-buttons">
                                     <a href="/preachers/<%= preacher._id %>/edit" class="btn btn-primary">Edytuj</a>
                                     <a href="/preachers/<%= preacher._id %>/delete" class="btn btn-danger">Usuń</a>
                                 </div>
