--- a/views/preachers/search.ejs
+++ b/views/preachers/search.ejs
@@ -34,7 +34,7 @@
                 <% preachers.forEach((preacher) => { %>
                     <div class="col-lg-12">
                                 <span class="info float-start"><%= preacher.name %></span>
-                                <div class="d-inline float-end">
+                                <div class="d-inline float-end preachers-buttons">
                                     <a href="/preachers/<%= preacher._id %>/edit" class="btn btn-primary">Edytuj</a>
                                     <a href="/preachers/<%= preacher._id %>/delete" class="btn btn-danger">Usuń</a>
                                 </div>
