--- a/views/territories/availableSearch.ejs
+++ b/views/territories/availableSearch.ejs
@@ -101,7 +101,7 @@
             <div class="row">
                 <% territories.forEach((territory) => { %>
                     
-                    <div class="col-lg-6 col-md-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="card <%= territory.kind %>">
                                 <div class="card-title text-center" id="name">
                                     <br>
