--- a/views/territories/index.ejs
+++ b/views/territories/index.ejs
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="text-center">Wszystkie tereny zboru <%= currentUser.username %></h1>
+                <h1 class="text-center">Wszystkie tereny zboru <%= currentUser.username %>: <%= territories.length %></h1>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -116,7 +116,7 @@
             <div class="row">
                 <% territories.forEach((territory) => { %>
                     
-                    <div class="col-lg-4 col-md-6 col-sm-12" style="margin-top: 8px;">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="card <%= territory.kind %>">
                                 <div class="card-title text-center" id="name">
                                     <br>
