--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,4 @@
-
-<%- include("partials/header") %>
-   
+<%- include("partials/header") %> 
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -9,81 +7,7 @@
                 </h1>
             </div>
         </div>
-        <div class="row justify-content-center">
-            <div class="col-lg-12">
-                <div class="text-center">
-                    <div class="dropdown">
-                        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                            Wybierz kategorię wyszukiwania
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li>
-                                <a class="dropdown-item" id="city">Miejscowość</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" id="street">Ulica</a>     
-                            </li>
-                            <li>
-                                <a class="dropdown-item" id="number">Nr terenu</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" id="kind">Rodzaj terenu</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                
-                
-                <div id="citySearch">
-                    <br>
-                        <form action="/territories/available/search" method="get">
-                            <div class="input-group mb-3">
-                                <input type="search" class="form-control" name="city" placeholder="Wpisz nazwę miejscowości" aria-label="Wpisz nazwę miejscowości" aria-describedby="basic-addon2">
-                                <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
-                                
-                            </div>
-                        </form>
-                </div>
-
-                <div id="streetSearch">
-                    <br>
-                        <form action="/territories/available/search" method="get">
-                            <div class="input-group mb-3">
-                                <input type="search" class="form-control" name="street" placeholder="Wpisz nazwę ulicy" aria-label="Wpisz nazwę ulicy" aria-describedby="basic-addon2">
-                                
-                                <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
-                                
-                            </div>
-                        </form>
-                </div>
-
-                <div id="numberSearch">
-                    <br>
-                        <form action="/territories/available/search" method="get">
-                            <div class="input-group mb-3">
-                                <input type="search" class="form-control" name="number" placeholder="Wpisz nr terenu" aria-label="Wpisz nr terenu" aria-describedby="basic-addon2">
-                                <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
-                            </div>
-                        </form>
-                </div>
-                <div id="kindSearch">
-                    <br>
-                        <form action="/territories/available/search" method="get">
-                            <div class="input-group mb-3">
-                                <select name="kind" class="form-select">
-                                    <option value="city">Teren miejski</option>
-                                    <option value="village">Teren wiejski</option>
-                                    <option value="market">Teren handlowy</option>
-                                </select>
-                                <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
-                            </div>
-                        </form>
-                </div>
-               
-            </div>
-            
-        </div>
-        <br>
+        <%- include("partials/freeSearch") %>
         <% if(territories.length===0){ %>
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-12">
@@ -95,108 +19,10 @@
         <% } else { %>
             <div class="row">
                 <% territories.forEach((territory) => { %>
-                    <% if(typeof territory.preacher === 'undefined'){ %>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                                <div class="card <%= territory.kind %>">
-                                    <div class="card-title text-center" id="name">
-                                        <br>
-                                        Karta terenu nr <%= territory.number %>
-                                    </div>
-                                        <div class="card-body">
-                                           
-                                            <p class="info">Miejscowość: <strong><%= territory.city %></strong></p>
-                                            <p class="info">Rodzaj: <strong><%= territory.kind %></strong></p>
-                                            <p class="info">Ulica: 
-                                                <strong><%= territory.street %> 
-                                                    <% if(typeof territory.beginNumber !== 'undefined'){ %>
-                                                        <%= territory.beginNumber %> 
-                                                        <% if(typeof territory.endNumber !== 'undefined'){ %>
-                                                            - <%= territory.endNumber %>
-                                                        <% } %>
-                                                    <% } %>
-                                                </strong>
-                                            </p>
-                                            <% if(typeof territory.description !== 'undefined' && territory.description !== ''){ %>
-                                                <p class="info">Opis: <strong><%= territory.description %></strong></p>
-                                            <% } %>
-                                            
-                                            <% if(typeof territory.forbidden !== 'undefined' && territory.forbidden !== ''){ %>
-                                                <p class="info">Nie zachodzić: <strong><%= territory.forbidden %></strong></p>
-                                            <% } %>
-                                            <p class="info">Ostatnio opracowane: <strong><%= territory.lastWorked %></strong></p>
-                                            <p class="info"><strong>Teren oznaczony jako <span class="text-success">wolny</span></strong> </p>
-                                            <p class="info"><strong>Teren nie był opracowywany od 
-                                                    <% if(countDaysFromNow(territory.lastWorked) < 31){ %>
-                                                        <%= countDaysFromNow(territory.lastWorked) %> dni
-                                                    <% } else if(countDaysFromNow(territory.lastWorked) < 62){ %>
-                                                        <span class="text-primary"><%= countDaysFromNow(territory.lastWorked) %></span> dni
-                                                    <% } else if(countDaysFromNow(territory.lastWorked) < 93){ %>
-                                                        <span class="text-orange" style="color: #fd7e14;"><%= countDaysFromNow(territory.lastWorked) %></span> dni
-                                                    <% } else if(countDaysFromNow(territory.lastWorked) >= 124){ %>
-                                                        <span class="text-danger"><%= countDaysFromNow(territory.lastWorked) %></span> dni
-                                                    <% } %>
-                                            </strong></p>
-                                            <div class="d-inline">
-                                                <a href="/territories/<%= territory._id %>" class="btn btn-success">Zobacz historię</a>
-                                                <a href="/territories/<%= territory._id %>/edit" class="btn btn-primary">Edytuj</a>
-                                                <a href="/territories/<%= territory._id %>/delete" class="btn btn-danger">Usuń</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            
-                    <% } %>
-                    
-                            
-            
+                    <%- include("partials/territory", {territory: territory}) %>
                 <% }) %>
             </div>
         <% } %>
+        <script src="/manageFreeSearch.js"></script>
 
-        <script>
-            let cityButton = document.getElementById("city");
-            let streetButton = document.getElementById("street");
-            let numberButton = document.getElementById("number");
-            let citySearch = document.getElementById("citySearch");
-            let streetSearch = document.getElementById("streetSearch");
-            let numberSearch = document.getElementById("numberSearch");
-            let kindButton = document.getElementById("kind");
-            let kindSearch = document.getElementById("kindSearch");
-    
-            citySearch.style.display = "none";
-            streetSearch.style.display = "none";
-            numberSearch.style.display = "none";
-            kindSearch.style.display = "none";
-            
-    
-            cityButton.addEventListener("click", function(){
-                citySearch.style.display = "block";
-                streetSearch.style.display = "none";
-                numberSearch.style.display = "none";
-                kindSearch.style.display = "none";
-            })
-        
-            streetButton.addEventListener("click", function(){
-                citySearch.style.display = "none";
-                streetSearch.style.display = "block";
-                numberSearch.style.display = "none";
-                kindSearch.style.display = "none";
-            })
-            numberButton.addEventListener("click", function(){
-                citySearch.style.display = "none";
-                streetSearch.style.display = "none";
-                numberSearch.style.display = "block";
-                kindSearch.style.display = "none";
-            })
-            kindButton.addEventListener("click", function(){
-                citySearch.style.display = "none";
-                streetSearch.style.display = "none";
-                numberSearch.style.display = "none";
-                kindSearch.style.display = "block";
-            })
-        </script>
-    
-        
 <%- include("partials/footer") %>
-
-
