--- a/views/territories/index.ejs
+++ b/views/territories/index.ejs
@@ -6,103 +6,7 @@
                 <h1 class="text-center">Wszystkie tereny zboru <%= currentUser.username %>: <%= territories.length %></h1>
             </div>
         </div>
-        <div class="row justify-content-center">
-                <div class="col-lg-12">
-                    <div class="text-center">
-                        <div class="dropdown d-inline-block">
-                            <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                Wybierz kategorię wyszukiwania
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li>
-                                    <a class="dropdown-item" id="city">Miejscowość</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" id="street">Ulica</a>     
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" id="number">Nr terenu</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" id="preacher">Głosiciel</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" id="kind">Rodzaj terenu</a>
-                                </li>
-                            </ul>
-                        </div> 
-                        <span style="margin: 0 15px;">lub</span>
-                        <a href="/territories/new" class="btn btn-golden">Dodaj teren</a>
-                    </div>
-                    
-                    
-                    <div id="citySearch">
-                        <br>
-                            <form action="/territories/search" method="get">
-                                <div class="input-group mb-3">
-                                    <input type="search" class="form-control" name="city" placeholder="Wpisz nazwę miejscowości" aria-label="Wpisz nazwę miejscowości" aria-describedby="basic-addon2">
-                                    <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
-                                    
-                                </div>
-                            </form>
-                    </div>
-
-                    <div id="streetSearch">
-                        <br>
-                            <form action="/territories/search" method="get">
-                                <div class="input-group mb-3">
-                                    <input type="search" class="form-control" name="street" placeholder="Wpisz nazwę ulicy" aria-label="Wpisz nazwę ulicy" aria-describedby="basic-addon2">
-                                    
-                                    <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
-                                    
-                                </div>
-                            </form>
-                    </div>
-
-                    <div id="numberSearch">
-                        <br>
-                            <form action="/territories/search" method="get">
-                                <div class="input-group mb-3">
-                                    <input type="search" class="form-control" name="number" placeholder="Wpisz nr terenu" aria-label="Wpisz nr terenu" aria-describedby="basic-addon2">
-                                    <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
-                                </div>
-                            </form>
-                    </div>
-                    <div id="preacherSearch">
-                        <br>
-                            <form action="/territories/search" method="get">
-                                <div class="input-group mb-3">
-                                    <select class="form-control" name="preacher" aria-describedby="basic-addon2" style="font-family: 'Montserrat', sans-serif;
-                                   
-                                    color: #28a745">
-                                        <option value="" style="color: black;">Wybierz głosiciela</option>
-                                        <% for(let i=0; i<preachers.length;i++){ %>
-                                            <option value="<%= preachers[i]._id %>" style="color:black"><%= preachers[i].name %></option>
-                                        <% } %>
-                                    </select>
-                                    
-                                    <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
-                                   
-                                </div>
-                            </form>
-                    </div>
-                    <div id="kindSearch">
-                        <br>
-                            <form action="/territories/search" method="get">
-                                <div class="input-group mb-3">
-                                    <select name="kind" class="form-select">
-                                        <option value="city">Teren miejski</option>
-                                        <option value="village">Teren wiejski</option>
-                                        <option value="market">Teren handlowy</option>
-                                    </select>
-                                    <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
-                                </div>
-                            </form>
-                    </div>
-                </div>
-                
-            </div>
-            <br>
+        <%- include("../partials/territorySearch") %>
         <% if(territories.length===0){ %>
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-12">
@@ -111,135 +15,14 @@
                     </div>
                 </div>
             </div>
-           
         <% } else { %>
             <div class="row">
                 <% territories.forEach((territory) => { %>
-                    
-                    <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="card <%= territory.kind %>">
-                                <div class="card-title text-center" id="name">
-                                    <br>
-                                    Karta terenu nr <%= territory.number %>
-                                </div>
-                                    <div class="card-body">
-                                       
-                                        <p class="info">Miejscowość: <strong><%= territory.city %></strong></p>
-                                        <p class="info">Rodzaj: <strong><%= territory.kind %></strong></p>
-                                        <p class="info">Ulica: 
-                                            <strong><%= territory.street %> 
-                                                <% if(typeof territory.beginNumber !== 'undefined'){ %>
-                                                    <%= territory.beginNumber %> 
-                                                    <% if(typeof territory.endNumber !== 'undefined'){ %>
-                                                        - <%= territory.endNumber %>
-                                                    <% } %>
-                                                <% } %>
-                                            </strong>
-                                        </p>
-                                        <% if(typeof territory.description !== 'undefined' && territory.description !== ''){ %>
-                                            <p class="info">Opis: <strong><%= territory.description %></strong></p>
-                                        <% } %>
-                                        
-                                        
-                                        <p class="info">Ostatnio opracowane: <strong><%= territory.lastWorked %></strong></p>
-                                        
-                                        <% if(typeof territory.preacher !== 'undefined'){ %>
-                                            <p class="info">Głosiciel: <strong><%= territory.preacher.name %></strong></p>
-                                            <p class="info">Pobrany: <strong><%= territory.taken %></strong></p>
-                                            <p class="info"><strong><%= territory.preacher.name %> ma ten teren
-                                                <% if(countDaysFromNow(territory.taken) < 90){ %>
-                                                    <%= countDaysFromNow(territory.taken) %> dni
-                                                <% } else if(countDaysFromNow(territory.taken) < 120){ %>
-                                                    <span class="text-primary"><%= countDaysFromNow(territory.taken) %></span> dni
-                                                <% } else if(countDaysFromNow(territory.taken) >= 120){ %>
-                                                    <span class="text-danger"><%= countDaysFromNow(territory.taken) %></span> dni
-                                                    <br>
-                                                    <br>
-                                                    <span class="text-danger"><strong>Przypomnij <%= territory.preacher.name %> o oddaniu terenu</strong> </span>
-                                                <% } %>
-                                            </strong></p>
-                                        <% } else { %>
-                                            <p class="info"><strong>Teren oznaczony jako <span class="text-success">wolny</span></strong> </p>
-                                            <p class="info"><strong>Teren nie był opracowywany od 
-                                                    <% if(countDaysFromNow(territory.lastWorked) < 31){ %>
-                                                        <%= countDaysFromNow(territory.lastWorked) %> dni
-                                                    <% } else if(countDaysFromNow(territory.lastWorked) < 62){ %>
-                                                        <span class="text-primary"><%= countDaysFromNow(territory.lastWorked) %></span> dni
-                                                    <% } else if(countDaysFromNow(territory.lastWorked) < 93){ %>
-                                                        <span class="text-orange" style="color: #fd7e14;"><%= countDaysFromNow(territory.lastWorked) %></span> dni
-                                                    <% } else if(countDaysFromNow(territory.lastWorked) >= 124){ %>
-                                                        <span class="text-danger"><%= countDaysFromNow(territory.lastWorked) %></span> dni
-                                                    <% } %>
-                                            </strong></p>
-                                        <% } %>
-                                        <div class="d-inline">
-                                            <a href="/territories/<%= territory._id %>" class="btn btn-success">Zobacz historię</a>
-                                                <a href="/territories/<%= territory._id %>/edit" class="btn btn-primary">Edytuj</a>
-                                                <a href="/territories/<%= territory._id %>/delete" class="btn btn-danger">Usuń</a>
-                                            </div>
-                                        
-                                    </div>
-                                </div>
-                            </div>
- 
+                    <%- include("../partials/territory", {territory: territory}) %>
                 <% }) %>
             </div>
         <% } %>
     </div>      
-    <script>
-        let preacherButton = document.getElementById("preacher");
-        let cityButton = document.getElementById("city");
-        let streetButton = document.getElementById("street");
-        let numberButton = document.getElementById("number");
-        let preacherSearch = document.getElementById("preacherSearch");
-        let citySearch = document.getElementById("citySearch");
-        let streetSearch = document.getElementById("streetSearch");
-        let numberSearch = document.getElementById("numberSearch");
-        let kindButton = document.getElementById("kind");
-        let kindSearch = document.getElementById("kindSearch");
-
-        preacherSearch.style.display = "none";
-        citySearch.style.display = "none";
-        streetSearch.style.display = "none";
-        numberSearch.style.display = "none";
-        kindSearch.style.display = "none";
-        
-
-        cityButton.addEventListener("click", function(){
-            preacherSearch.style.display = "none";
-            citySearch.style.display = "block";
-            streetSearch.style.display = "none";
-            numberSearch.style.display = "none";
-            kindSearch.style.display = "none";
-        })
-        preacherButton.addEventListener("click", function(){
-            preacherSearch.style.display = "block";
-            citySearch.style.display = "none";
-            streetSearch.style.display = "none";
-            kindSearch.style.display = "none";
-            numberSearch.style.display = "none";
-        })
-        streetButton.addEventListener("click", function(){
-            preacherSearch.style.display = "none";
-            citySearch.style.display = "none";
-            streetSearch.style.display = "block";
-            numberSearch.style.display = "none";
-            kindSearch.style.display = "none";
-        })
-        numberButton.addEventListener("click", function(){
-            preacherSearch.style.display = "none";
-            citySearch.style.display = "none";
-            streetSearch.style.display = "none";
-            numberSearch.style.display = "block";
-            kindSearch.style.display = "none";
-        })
-        kindButton.addEventListener("click", function(){
-                citySearch.style.display = "none";
-                streetSearch.style.display = "none";
-                numberSearch.style.display = "none";
-                kindSearch.style.display = "block";
-                preacherSearch.style.display = "none";
-        })
-    </script>
+    <script src="/manageTerritorySearch.js"></script>
 
 <%- include("../partials/footer") %>
