--- a/views/territories/availableSearch.ejs
+++ b/views/territories/availableSearch.ejs
@@ -7,7 +7,7 @@
                 </h1>
             </div>
         </div>
-        <%- include("./partials/freeSearch") %>
+        <%- include("../partials/freeSearch") %>
         <% if(territories.length === 0){ %>
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-12">
