--- a/views/territories/new.ejs
+++ b/views/territories/new.ejs
@@ -136,6 +136,23 @@
                                 </label>
                                 
                             </div>
+
+                            <label class="username">
+                                Czy jest fizyczna karta terenu?
+                                
+                            </label>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="isPhysicalCard" value="true" id="flexRadioDisabled">
+                                <label class="form-check-label" for="flexRadioDisabled">
+                                  Tak
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="isPhysicalCard" value="false" id="flexRadioCheckedDisabled">
+                                <label class="form-check-label" for="flexRadioCheckedDisabled">
+                                  Nie
+                                </label>
+                              </div>
                             <input type="submit" value="Dodaj teren" class="btn btn-success button btn-green" id="send">
                         </form>
                     </div>
