--- a/views/partials/territory.ejs
+++ b/views/partials/territory.ejs
@@ -1,8 +1,21 @@
+
+
 <div class="<%= typeof show !== 'undefined' ? 'col-lg-8 col-sm-12': 'col-lg-4 col-md-6 col-sm-12' %>">
-    <div class="card <%= territory.kind %>">
+    <% if (typeof show !== 'undefined') { %>
+        <div class="territory-navigation">
+            <% if((currentIndex - 1) >= 0){ %>
+                <a href="/territories/<%= territories[(currentIndex - 1)]?._id %>"><i class="fa-solid fa-backward"></i> Poprzedni</a>
+            <% } %>
+            
+            <% if((currentIndex + 1) < territories.length){ %>
+                <a href="/territories/<%= territories[(currentIndex + 1)]?._id %>"></i> Następny <i class="fa-solid fa-forward"></i></a>
+            <% } %>
+        </div>
+    <% } %>
+    <div class="card <%= territory.kind %> <%= !territory.isPhysicalCard && 'noPhysical' %>">
         <div class="card-title text-center" id="name">
             <br>
-            Karta terenu nr <%= territory.number %>
+            Karta terenu nr <%= territory.number %> 
         </div>
             <div class="card-body">
                 <p class="info">Miejscowość: <strong><%= territory.city %></strong></p>
@@ -11,9 +24,9 @@
                     <strong><%= territory.street %> 
                         <% if(typeof territory.beginNumber !== 'undefined'){ %>
                             <%= territory.beginNumber %> 
-                            <% if(typeof territory.endNumber !== 'undefined'){ %>
-                                - <%= territory.endNumber %>
-                            <% } %>
+                        <% } %>
+                        <% if(territory.endNumber != null){ %>
+                            - <%= territory.endNumber %>
                         <% } %>
                     </strong>
                 </p>
@@ -52,6 +65,15 @@
                             <% } %>
                     </strong></p>
                 <% } %>
+
+                <% if(!territory.isPhysicalCard){ %>
+                    <p class="info" style="color: #9999CC;">
+                        <strong>
+                            Teren nie posiada fizycznej karty
+                        </strong>
+                    </p>
+                <% } %> 
+                
                 <div class="d-inline">
                     <a href="/territories/<%= territory._id %>" class="btn btn-success">Zobacz historię</a>
                         <a href="/territories/<%= territory._id %>/edit" class="btn btn-primary">Edytuj</a>
@@ -116,6 +138,13 @@
                                                             <% } %>
                                                     </strong></p>
                                                 <% } %>
+                                                <% if(!checkout.record.isPhysicalCard){ %>
+                                                    <p class="info" style="color: #9999CC;">
+                                                        <strong>
+                                                            Teren nie posiada fizycznej karty
+                                                        </strong>
+                                                    </p>
+                                                <% } %> 
                                                 <hr>
                             </div>
                         <% }) %>
