--- a/views/territories/edit.ejs
+++ b/views/territories/edit.ejs
@@ -143,6 +143,23 @@
                                 </label>
                                 
                             </div>
+                         
+                            <label class="username">
+                                Czy jest fizyczna karta terenu?
+                                
+                            </label>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="territory[isPhysicalCard]" value="true" checked="<%= territory.isPhysicalCard %>">
+                                <label class="form-check-label" for="flexRadioDisabled">
+                                  Tak
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="territory[isPhysicalCard]" value="false" checked="<%= !territory.isPhysicalCard %>">
+                                <label class="form-check-label" for="flexRadioCheckedDisabled">
+                                  Nie
+                                </label>
+                              </div>
                             <input type="submit" value="Edytuj teren" class="btn btn-success button btn-green" id="send">
                         </form>
                     </div>
